# cCarSaleManagementSystem

./: .clangd  .gitignore  CMakeLists.txt  README  README.md  compile_commands.json  makefile
.cache/clangd/index/: car_data.c.10E3C62807C0562D.idx  car_data.h.51CAF49DAA196C70.idx  car_operations.c.C6D0FBAC7C462172.idx  car_operations.h.A5DA4D80C9248C40.idx  main.c.0483C224742B96AB.idx  reports.c.3B1FDF6D8937409E.idx  reports.h.B7010DCDB36141CA.idx  test_data.c.19E4CD44FC1271F2.idx  test_data.h.94C7D646C80FF63A.idx  ui.c.8282AA164A6C2543.idx  ui.h.68DF121F02805272.idx  utils.c.9C21064E94F3D36B.idx  utils.h.CFDE38C64F4AC969.idx
include/: car_data.h  car_operations.h  file_operations.h  reports.h  test_data.h  ui.h  utils.h
src/: car_data.c  car_operations.c  file_operations.c  main.c  reports.c  test_data.c  ui.c  utils.c
